--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,45 @@
-.description{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: beige;
+}
+
+.description {
     background-color: lightblue;
-    margin: 2px;
-    padding: 5px;
-    border : solid #ffffffff;
+    padding: 10px;
+    border: solid white;
     display: flex;
-    margin-left: 5px;
-    margin-right: 90px;
     justify-content: center;
     box-shadow: 0px 0px 10px #000000;
     border-radius: 10px;
     font-size: medium;
+    max-width: 80%;
+    margin: 10px auto;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: beige;
+
+.box {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
 }
-.box{
-    display: inline-flex;
-    /* background-color: beige; */
-}
-img {
-    margin-right: 40px;
+
+img {9995386*96
+    
+    margin-top: 20px; 
     border-radius: 50%;
     object-fit: cover;
 }
-.me{
+
+.me {
     padding: 7px;
     display: flex;
     justify-content: center;
     border: 2px solid white;
-    background-color: aliceblue ;
-    font-size: 40px;
+    background-color: aliceblue;
+    font-size: 20px;
 }
