--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,8 @@ body {
     justify-content: center;
 }
 
-img {9995386*96
-    
+img {
+
     margin-top: 20px; 
     border-radius: 50%;
     object-fit: cover;
