--- a/about_styles.css
+++ b/about_styles.css
@@ -5,7 +5,10 @@
 }
 
 body {
-    background-color: beige;
+    font-family: Arial, sans-serif;
+    background-color: #f7f1e3;
+    margin: 0;
+    padding: 0;
 }
 
 .description {
@@ -36,14 +39,14 @@ img {
 }
 
 .me {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 15px;
     border: 2px solid black;
     background-color: aliceblue;
-    font-size: large;
     border-radius: 10px;
-    margin: 20px;
-    margin-left: 35vw;
-    margin-right: 35vw;
+    width: 50%;
+    margin: 20px auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
