--- a/index_styles.css
+++ b/index_styles.css
@@ -1,6 +1,21 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: beige;
+    background-color: #f7f1e3;
+    margin: 0;
+    padding: 0;
+}
+
+.title {
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 15px;
+    border: 2px solid black;
+    background-color: aliceblue;
+    border-radius: 10px;
+    width: 50%;
+    margin: 20px auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 header {
@@ -14,18 +29,6 @@ main {
     padding: 20px;
 }
 
-.title {
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    border: 2px solid black;
-    background-color: aliceblue;
-    font-size: large;
-    border-radius: 10px;
-    margin: 20px;
-    margin-left: 35vw;
-    margin-right: 35vw;
-}
 
 footer {
     position: fixed;
